// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 580 1`] = `
<div
  class="risk-gauge-container"
>
  <svg
    aria-labelledby="risk-gauge-title-below"
    class="risk-gauge-svg"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-below"
    >
      Risk score 
      580
       — band 
      below
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#f85149"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="54.88547165389227"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      580
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <span
    class="risk-gauge-tier-wrap"
    style="color: rgb(248, 81, 73);"
  >
    <span
      aria-hidden="true"
      class="risk-gauge-tier-glyph"
      data-tier="below"
    >
      ●
    </span>
    <span
      class="sr-only"
    >
      Below recommended risk score
    </span>
  </span>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
</div>
`;

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 660 1`] = `
<div
  class="risk-gauge-container"
>
  <svg
    aria-labelledby="risk-gauge-title-fair"
    class="risk-gauge-svg"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-fair"
    >
      Risk score 
      660
       — band 
      fair
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#d29922"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="38.623109682368636"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      660
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <span
    class="risk-gauge-tier-wrap"
    style="color: rgb(210, 153, 34);"
  >
    <span
      aria-hidden="true"
      class="risk-gauge-tier-glyph"
      data-tier="fair"
    >
      ◆
    </span>
    <span
      class="sr-only"
    >
      Fair risk score
    </span>
  </span>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
</div>
`;

exports[`RiskGauge inline component from Dashboard > matches snapshot at score 740 1`] = `
<div
  class="risk-gauge-container"
>
  <svg
    aria-labelledby="risk-gauge-title-strong"
    class="risk-gauge-svg"
    role="img"
    viewBox="0 0 160 100"
  >
    <title
      id="risk-gauge-title-strong"
    >
      Risk score 
      740
       — band 
      strong
    </title>
    <path
      class="risk-gauge-bg"
      d="M 25 75 A 55 55 0 0 1 135 75"
    />
    <path
      class="risk-gauge-fill"
      d="M 25 75 A 55 55 0 0 1 135 75"
      stroke="#3fb950"
      stroke-dasharray="172.78759594743863"
      stroke-dashoffset="22.360747710845004"
    />
    <text
      class="risk-gauge-score"
      x="80"
      y="63"
    >
      740
    </text>
    <text
      class="risk-gauge-label"
      x="80"
      y="37"
    >
      Risk Score
    </text>
  </svg>
  <span
    class="risk-gauge-tier-wrap"
    style="color: rgb(63, 185, 80);"
  >
    <span
      aria-hidden="true"
      class="risk-gauge-tier-glyph"
      data-tier="strong"
    >
      ▲
    </span>
    <span
      class="sr-only"
    >
      Strong risk score
    </span>
  </span>
  <div
    class="risk-meta"
  >
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Trend
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158); display: flex; align-items: center; gap: 8px;"
      >
        <span>
          ─
           
          Stable
        </span>
      </span>
    </div>
    <div
      class="risk-meta-item"
    >
      <span
        class="rm-label"
      >
        Last Updated
      </span>
      <span
        class="rm-value"
        style="color: rgb(139, 148, 158);"
      >
        Jan 1, 2025
      </span>
    </div>
  </div>
</div>
`;
